--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,14 +19,15 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-            #      - name: Cache pnpm modules
-            #        uses: actions/cache@v3
-            #        with:
-            #          path: ~/.pnpm-store
-            #          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-            #          restore-keys: |
-            #            ${{ runner.os }}-
+          node-version:
+            ${{ matrix.node-version }}
+      - name: Cache pnpm modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
       - name: Install pnpm
         uses: pnpm/action-setup@v2.2.1
         with:
