--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,8 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version:
-            ${{ matrix.node-version }}
+          node-version: ${{ matrix.node-version }}
       - name: Cache pnpm modules
         uses: actions/cache@v3
         with:
@@ -32,7 +31,8 @@ jobs:
         uses: pnpm/action-setup@v2.2.1
         with:
           version: ${{ env.pnpm-version }}
-          run_install: true
+          run_install: |
+            - recursive: false
       - name: Test build
         run: pnpm run test
       - uses: codecov/codecov-action@v3
