--- a/renovate.json
+++ b/renovate.json
@@ -1,32 +1,18 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base",
-    ":timezone(Asia/Tokyo)"
-  ],
-  "schedule": [
-    "before 4am on the first day of the month"
-  ],
+  "extends": ["config:base", ":timezone(Asia/Tokyo)"],
+  "schedule": ["before 4am on the first day of the month"],
   "dependencyDashboard": true,
   "packageRules": [
     {
       "groupName": "dependencies (minor update)",
-      "matchDepTypes": [
-        "dependencies"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch",
-        "pin",
-        "digest"
-      ],
+      "matchDepTypes": ["dependencies"],
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
       "automerge": true
     },
     {
       "groupName": "devDependencies",
-      "matchDepTypes": [
-        "devDependencies"
-      ],
+      "matchDepTypes": ["devDependencies"],
       "automerge": true
     }
   ]
