--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "micromark-extension-jaruby",
   "version": "0.1.4",
   "description": "micromark extension to support Japanese ruby",
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "pnpm@9.1.0+sha256.22e36fba7f4880ecf749a5ca128b8435da085ecd49575e7fb9e64d6bf4fad394",
   "scripts": {
     "build": "tsc --build --clean && tsc --build && micromark-build",
     "format": "prettier . -w --log-level warn && eslint --fix .",
