--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   node-version: 20
-  pnpm-version: latest
+  PNPM_HOME: /home/runner/.local/share/pnpm
 
 jobs:
   build:
@@ -19,11 +19,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ env.node-version }}
-      - name: Install pnpm
-        uses: pnpm/action-setup@v3.0.0
-        with:
-          version: ${{ env.pnpm-version }}
-          run_install: false
+      - name: Configure pnpm path
+        run: echo "${{ env.PNPM_HOME }}" >> $GITHUB_PATH
+      - name: Setup pnpm with corepack
+        run: |
+          corepack enable pnpm
+          corepack prepare pnpm@latest --activate
+          SHELL="$(which bash)" pnpm setup --force
       - name: Get pnpm store directory
         id: pnpm-cache
         shell: bash
@@ -37,7 +39,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       - name: Install node dependencies
-        run: pnpm install
+        run: pnpm i --frozen-lockfile
       - run: pnpm run build
 
   npm-publish:
@@ -49,11 +51,13 @@ jobs:
         with:
           node-version: ${{ env.node-version }}
           registry-url: https://registry.npmjs.org/
-      - name: Install pnpm
-        uses: pnpm/action-setup@v3.0.0
-        with:
-          version: ${{ env.pnpm-version }}
-          run_install: false
+      - name: Configure pnpm path
+        run: echo "${{ env.PNPM_HOME }}" >> $GITHUB_PATH
+      - name: Setup pnpm with corepack
+        run: |
+          corepack enable pnpm
+          corepack prepare pnpm@latest --activate
+          SHELL="$(which bash)" pnpm setup --force
       - name: Get pnpm store directory
         id: pnpm-cache
         shell: bash
@@ -67,7 +71,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       - name: Install node dependencies
-        run: pnpm install
-      - run: npm publish
+        run: pnpm i --frozen-lockfile
+      - run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
